Add baseline translations.

--- a/languages/ISO639-3/en.ini
+++ b/languages/ISO639-3/en.ini
@@ -51,9 +51,11 @@ arm = "Armenian"
 arn = "Mapudungun"
 arp = "Arapaho"
 arr = "Karo"
+ars = "Najdi Arabic"
 art = "Artificial languages"
 aru = "Aruá"
 arw = "Arawak"
+asa = "Asu"
 ash = "Abishira"
 ask = "Ashkun"
 asl = "Asilulu"
@@ -73,6 +75,7 @@ awa = "Awadhi"
 awe = "Awetí"
 aym = "Aymara"
 aze = "Azerbaijani"
+azj = "Azerbaijani"
 bad = "Banda languages"
 bag = "Tuki"
 bah = "Bahamian Creole"
@@ -91,12 +94,15 @@ bel = "Belarusian"
 bem = "Bemba"
 ben = "Bengali"
 ber = "Berber languages"
+bez = "Bena"
+bgc = "Haryanvi"
 bho = "Bhojpuri"
 bih = "Bihari languages"
 bik = "Bikol"
 bin = "Bini"
 bis = "Bislama"
 bla = "Siksika"
+blo = "Anii"
 bnt = "Bantu languages"
 bod = "Tibetan"
 bol = "Bole"
@@ -104,12 +110,14 @@ bos = "Bosnian"
 bqa = "Tchumbuli"
 bra = "Braj"
 bre = "Breton"
+brx = "Bodo"
 bsw = "Baiso"
 btk = "Batak languages"
 bua = "Buriat"
 bug = "Bugis"
 bul = "Bulgarian"
 bur = "Burmese"
+bxk = "Luyia"
 byn = "Bilin"
 cab = "Garifuna"
 cad = "Caddo"
@@ -119,10 +127,12 @@ car = "Galibi Carib"
 cas = "Tsimané"
 cat = "Catalan"
 cau = "Caucasian languages"
+ccp = "Chakma"
 ceb = "Cebuano"
 cel = "Celtic languages"
 cen = "Cen"
 ces = "Czech"
+cgg = "Chiga"
 cha = "Chamorro"
 chb = "Chibcha"
 che = "Chechen"
@@ -138,7 +148,10 @@ chu = "Church Slavic"
 chv = "Chuvash"
 chy = "Cheyenne"
 ckb = "Sorani"
+cld = "Syriac"
 cmc = "Chamic languages"
+cmn = "Chinese"
+cnr = "Montenegrin"
 con = "Cofán"
 cop = "Coptic"
 cor = "Cornish"
@@ -154,6 +167,7 @@ crp = "Creoles and Pidgins"
 csb = "Kashubian"
 csi = "Coast Miwok"
 csn = "Colombian Sign Language"
+csw = "Swampy Cree"
 cus = "Cushitic languages"
 cym = "Welsh"
 cze = "Czech"
@@ -169,11 +183,13 @@ den = "Slave"
 der = "Deori"
 des = "Desano"
 deu = "German"
+dgo = "Dogri"
 dgr = "Dogrib"
 dic = "Lakota Dida"
 din = "Dinka"
 dis = "Dimasa"
 div = "Divehi"
+dje = "Zarma"
 dng = "Dungan"
 doi = "Dogri"
 dpe = "Dari"
@@ -191,9 +207,11 @@ dum = "Dutch, Middle (ca. 1050-1350)"
 dur = "Dii"
 dus = "Dumi"
 dut = "Dutch"
+dyo = "Jola-Fonyi"
 dyu = "Dyula"
 dzo = "Dzongkha"
 ebg = "Ebughu"
+ebu = "Embu"
 eee = "E"
 efi = "Efik"
 egy = "Egyptian"
@@ -201,6 +219,7 @@ ehu = "Ehueun"
 eit = "Eitiep"
 eka = "Ekajuk"
 eke = "Ekit"
+ekk = "Estonian"
 eli = "Nding"
 ell = "Greek, Modern (1453- )"
 elx = "Elamite"
@@ -258,6 +277,7 @@ frs = "Eastern Frisian"
 fry = "Western Frisian"
 fse = "Finnish Sign Language"
 fub = "Adamawa Fulfulde"
+fuc = "Fula"
 fuh = "Western Niger Fulfulde"
 ful = "Fula"
 fun = "Fulniô"
@@ -269,6 +289,7 @@ gai = "Borei"
 gal = "Galoli"
 gar = "Galeya"
 gay = "Gayo"
+gaz = "Oromo"
 gba = "Gbaya"
 gdh = "Gadjerawang"
 geb = "Kire"
@@ -302,6 +323,7 @@ gsw = "Swiss German, Alemannic, Alsatian"
 gua = "Shiki"
 guj = "Gujarati"
 guw = "Gun"
+guz = "Gusii"
 gwe = "Gweno"
 gwi = "Gwich'in"
 hai = "Haida"
@@ -309,6 +331,7 @@ haq = "Ha"
 hat = "Haitian French Creole"
 hau = "Hausa"
 haw = "Hawaiian"
+hbs = "Serbian (Latin)"
 heb = "Hebrew"
 her = "Herero"
 hil = "Hiligaynon"
@@ -366,7 +389,9 @@ jao = "Yanyuwa"
 jav = "Javanese"
 jbo = "Ljoban (Artificial language)"
 jge = "Judeo-Georgian"
+jgo = "Ngomba"
 jid = "Bu"
+jmc = "Machame"
 jpa = "Jewish Palestinian Aramaic"
 jpn = "Japanese"
 jpr = "Judeo-Persian"
@@ -386,12 +411,17 @@ kaw = "Kawi"
 kaz = "Kazakh"
 kbd = "Kabardian"
 kca = "Khanty"
+kde = "Makonde"
+kea = "Kabuverdianu"
 kel = "Kela"
 ket = "Ket"
+kgp = "Kaingang"
 kha = "Khasi"
 khi = "Khoisan languages"
+khk = "Mongolian"
 khm = "Central Khmer"
 kho = "Khotanese, Sakan"
+khq = "Koyra Chiini"
 kie = "Kibet"
 kii = "Kitsai"
 kik = "Kikuyu"
@@ -399,9 +429,11 @@ kin = "Kinyarwanda"
 kir = "Kyrgyz"
 kjr = "Kurudu"
 kki = "Kagulu"
+kkj = "Kako"
 kla = "Klamath-Modoc"
 kmb = "Kimbundu"
 kmr = "Kurmanji"
+knn = "Konkani"
 kok = "Konkani"
 kom = "Komi"
 kon = "Kongo"
@@ -415,6 +447,9 @@ krj = "Kinaray-A"
 krl = "Karelian"
 kro = "Kru languages"
 kru = "Kurukh"
+ksb = "Shambala"
+ksf = "Bafia"
+ksh = "Colognian"
 ksi = "Krisa"
 kua = "Kuanyama"
 kum = "Kumyk"
@@ -422,9 +457,11 @@ kur = "Kurdish"
 kus = "Kusaal"
 kut = "Kootenai"
 kwn = "Kwangali"
+kxv = "Kuvi"
 lab = "Linear A"
 lad = "Ladino"
 laf = "Lafofa"
+lag = "Langi"
 lah = "Lahnda"
 lai = "Lambya"
 lam = "Lamba (Zambia and Congo)"
@@ -442,12 +479,14 @@ lgr = "Lengo"
 lia = "West-Central Limba"
 lic = "Hlai"
 lie = "Likila"
+lij = "Ligurian"
 lik = "Lika"
 lim = "Limburgish"
 lin = "Lingala"
 lis = "Lisu"
 lit = "Lithuanian"
 liv = "Livonian"
+lkt = "Lakota"
 lld = "Ladin"
 lle = "Lele"
 lol = "Mongo-Nkundu"
@@ -456,6 +495,7 @@ lor = "Téén"
 lov = "Lopi"
 low = "Tampias Lobu"
 loz = "Lozi"
+lrc = "Northern Luri"
 ltz = "Luxembourgish"
 lua = "Luba-Lulua"
 lub = "Luba-Katanga"
@@ -465,6 +505,8 @@ lui = "Luiseno"
 lun = "Lunda"
 luo = "Luo (Kenya and Tanzania)"
 lus = "Lushai"
+luy = "Luyia"
+lvs = "Latvian"
 mac = "Macedonian"
 mad = "Madurese"
 mag = "Magahi"
@@ -482,8 +524,12 @@ mdf = "Moksha"
 mdr = "Mandar"
 mdz = "Suruí Do Pará"
 men = "Mende"
+mer = "Meru"
 mes = "Masmaje"
+mfe = "Morisyen"
 mga = "Irish, Middle (ca. 1100-1550)"
+mgh = "Makhuwa-Meetto"
+mgo = "Metaʼ"
 mhr = "Eastern Mari"
 mic = "Micmac"
 min = "Minangkabau"
@@ -505,9 +551,11 @@ mos = "Mooré"
 mri = "Maori"
 mrj = "Western Mari"
 msa = "Malay"
+mua = "Mundang"
 mui = "Musi"
 mul = "Multiple languages"
 mun = "Munda languages"
+mup = "Rajasthani"
 mus = "Creek"
 mut = "Western Muria"
 muu = "Yaaku"
@@ -519,10 +567,12 @@ mwr = "Marwari"
 mya = "Burmese"
 myn = "Mayan languages"
 myv = "Erzya"
+mzn = "Mazanderani"
 nah = "Nahuatl languages"
 nai = "North American Indian languages"
 nam = "Ngan'gityemerri"
 nap = "Neapolitan Italian"
+naq = "Nama"
 nau = "Nauru"
 nav = "Navajo"
 nbl = "Ndebele (South Africa)"
@@ -558,6 +608,7 @@ nke = "Duke"
 nld = "Dutch"
 nli = "Grangali"
 nne = "Ngandyera"
+nnh = "Ngiemboon"
 nno = "Nynorsk"
 nob = "Bokmål"
 noe = "Nimadi"
@@ -568,6 +619,7 @@ non = "Old Norse"
 nor = "Norwegian"
 nos = "Eastern Nisu"
 not = "Nomatsiguenga"
+npi = "Nepali"
 nqo = "N'Ko"
 nsk = "Naskapi"
 nso = "Northern Sotho"
@@ -575,6 +627,7 @@ nti = "Natioro"
 nub = "Nubian languages"
 nul = "Nusa Laut"
 nur = "Nukuria"
+nus = "Nuer"
 nwc = "Newari, Old"
 nya = "Nyanja"
 nym = "Nyamwezi"
@@ -593,6 +646,7 @@ org = "Oring"
 ori = "Oriya"
 orm = "Oromo"
 oro = "Orokolo"
+ory = "Odia"
 osa = "Osage"
 oss = "Ossetic"
 ost = "Osatu"
@@ -608,9 +662,12 @@ pan = "Panjabi"
 pap = "Papiamento"
 pas = "Papasena"
 pau = "Palauan"
+pbu = "Pashto"
 pcc = "Bouyei"
+pcm = "Nigerian Pidgin"
 peo = "Old Persian (ca. 600-400 B.C.)"
 per = "Persian"
+pes = "Persian"
 phi = "Philippine languages"
 phn = "Phoenician"
 pho = "Phunoi"
@@ -624,6 +681,7 @@ por = "Portuguese"
 pot = "Potawatomi"
 ppi = "Paipai"
 pra = "Prakrit languages"
+prg = "Prussian"
 pro = "Old Provençal (to 1500), Old Occitan (to 1500)"
 prs = "Dari"
 prt = "Phai"
@@ -631,6 +689,7 @@ psa = "Asue Awyu"
 puo = "Puoc"
 pus = "Pushto, Pashto"
 que = "Quechua"
+quz = "Quechua"
 raj = "Rajasthani"
 ran = "Riantana"
 rap = "Rapanui"
@@ -645,6 +704,7 @@ rin = "Nungu"
 rit = "Ritarungo"
 rng = "Ronga"
 roa = "Romance languages"
+rof = "Rombo"
 roh = "Romansh"
 rom = "Romani"
 ron = "Romanian, Moldovan"
@@ -655,6 +715,7 @@ run = "Rundi"
 ruo = "Istro Romanian"
 rup = "Aromanian, Arumanian, Macedo-Romanian"
 rus = "Russian"
+rwk = "Rwa"
 rys = "Yaeyama"
 saa = "Saba"
 sad = "Sandawe"
@@ -665,20 +726,25 @@ sak = "Sake"
 sal = "Salishan languages"
 sam = "Samaritan Aramaic"
 san = "Sanskrit"
+saq = "Samburu"
 sar = "Saraveca"
 sas = "Sasak"
 sat = "Santali"
+sbp = "Sangu"
 scn = "Sicilian Italian"
 sco = "Scots"
 sed = "Sedang"
 see = "Seneca"
+seh = "Sena"
 sel = "Selkup"
 sem = "Semitic languages"
 ser = "Serrano"
+ses = "Koyraboro Senni"
 seu = "Serui-Laut"
 sew = "Sewa Bay"
 sga = "Irish, Old (to 1100)"
 sgn = "Sign languages"
+shi = "Tachelhit"
 shn = "Shan"
 sho = "Shanga"
 sia = "Akkala Sami"
@@ -739,8 +805,10 @@ sux = "Sumerian"
 sve = "Serili"
 svk = "Slovakian Sign Language"
 swa = "Swahili"
+swc = "Congo Swahili"
 swe = "Swedish"
 swf = "Sere"
+swh = "Swahili"
 swl = "Swedish Sign Language"
 swr = "Saweru"
 sws = "Seluwasan"
@@ -748,6 +816,7 @@ sww = "Sowa"
 syc = "Syriac"
 syr = "Syriac, Modern"
 sze = "Seze"
+szl = "Silesian"
 tag = "Tagoi"
 tah = "Tahitian"
 tai = "Tai languages"
@@ -762,6 +831,7 @@ tcz = "Thado Chin"
 tek = "Ibali Teke"
 tel = "Telugu"
 tem = "Temne"
+teo = "Teso"
 ter = "Terena"
 tet = "Tetum"
 tfr = "Teribe"
@@ -784,6 +854,7 @@ tmh = "Tamashek"
 tna = "Tacana"
 tog = "Tonga (Nyasa)"
 toi = "Tonga"
+tok = "Toki Pona"
 ton = "Tongan"
 tpi = "Tok Pisin"
 tra = "Tirahi"
@@ -807,8 +878,10 @@ tuu = "Tututni"
 tuv = "Turkana"
 tvl = "Tuvaluan"
 twi = "Twi"
+twq = "Tasawaq"
 tys = "Tày Sa Pa"
 tyv = "Tuvinian"
+tzm = "Central Atlas Tamazight"
 udi = "Udi"
 udm = "Udmurt"
 uga = "Ugaritic"
@@ -826,14 +899,18 @@ uru = "Urumi"
 uur = "Ura"
 uuu = "U"
 uzb = "Uzbek"
+uzn = "Uzbek"
 vai = "Vai"
 val = "Vehes"
+vec = "Venetian"
 ven = "Venda"
 vep = "Vepsian"
 vie = "Vietnamese"
 vis = "Vishavan"
+vmw = "Makhuwa"
 vol = "Volapük"
 vot = "Votic"
+vun = "Vunjo"
 wak = "Wakashan languages"
 wal = "Wolaitta, Wolaytta"
 wam = "Wampanoag"
@@ -854,25 +931,33 @@ wol = "Wolof"
 wor = "Woria"
 xal = "Kalmyk"
 xho = "Xhosa"
+xnr = "Kangri"
+xog = "Soga"
 yao = "Yao (Africa)"
 yap = "Yapese"
+yav = "Yangben"
+ydd = "Yiddish"
 yel = "Yela"
 yid = "Yiddish"
 yor = "Yoruba"
 ypk = "Yupik languages"
 yrk = "Nenets"
+yrl = "Nheengatu"
 yue = "Cantonese"
 yva = "Yawa"
 zap = "Zapotec"
 zbl = "Blissymbolics"
 zen = "Zenaga"
+zgh = "Standard Moroccan Tamazight"
 zha = "Zhuang"
 zho = "Chinese"
 zkk = "Karankawa"
 znd = "Zande languages"
+zsm = "Malay"
 zul = "Zulu"
 zun = "Zuni"
 zwa = "Zay"
 zxx = "No linguistic content, Not applicable"
+zyb = "Zhuang"
 zza = "Zaza"
 ||| = "No attempt to code"
