--- a/languages/ISO639-3/fi.ini
+++ b/languages/ISO639-3/fi.ini
@@ -308,6 +308,7 @@ haq = "Ha"
 hat = "haiti"
 hau = "hausa"
 haw = "havaiji"
+hbs = "serbia (latinalainen)"
 heb = "heprea"
 her = "herero"
 hil = "hiligaino"
