--- a/languages/ISO639-3/se.ini
+++ b/languages/ISO639-3/se.ini
@@ -187,6 +187,7 @@ hai = "haidagiella"
 hat = "kreyòl ayisyen/haiti kreolagiella"
 hau = "hausagiella"
 haw = "ʻōlelo hawaiʻi/havaijigiella"
+hbs = "serbiagiella (láhtenaš)"
 heb = "ivrit/hepreagiella"
 her = "otjihererogiella"
 hil = "ilonggo/hiligainogiella"
