--- a/languages/ISO639-3/sv.ini
+++ b/languages/ISO639-3/sv.ini
@@ -309,6 +309,7 @@ haq = "Ha"
 hat = "haitiska"
 hau = "haussa"
 haw = "hawaiiska"
+hbs = "serbiska (latinska)"
 heb = "hebreiska"
 her = "herero"
 hil = "hiligaynon"
