Add more missing lines.

--- a/languages/ISO639-3/en.ini
+++ b/languages/ISO639-3/en.ini
@@ -1,6 +1,8 @@
+??? = "Unknown"
 ___ = "No information provided"
 aap = "Pará Arára"
 aar = "Afar"
+aav = "Austro-Asiatic"
 abh = "Tajiki Arabic"
 abk = "Abkhaz"
 ace = "Achinese"
@@ -27,6 +29,7 @@ ali = "Amaimon"
 all = "Allar"
 als = "Tosk Albanian"
 alt = "Souther Altai"
+alv = "Atlantic-Congo"
 amh = "Amharic"
 amk = "Ambai"
 and = "Ansus"
@@ -41,6 +44,8 @@ ans = "Anserma"
 ant = "Antakarinya"
 apa = "Apache languages"
 apo = "Ambul"
+aqa = "Alacalufan"
+aql = "Algic"
 ara = "Arabic"
 arb = "Standard Arabic"
 arc = "Aramaic"
@@ -67,13 +72,16 @@ ate = "Atemble"
 ath = "Athapascan languages"
 ati = "Attié"
 ato = "Atong"
+auf = "Arauan"
 aun = "Molmo One"
 aus = "Australian languages"
 ava = "Avaric"
 ave = "Avestan"
 awa = "Awadhi"
+awd = "Arawakan"
 awe = "Awetí"
 aym = "Aymara"
+azc = "Uto-Aztecan"
 aze = "Azerbaijani"
 azj = "Azerbaijani"
 bad = "Banda languages"
@@ -127,7 +135,12 @@ car = "Galibi Carib"
 cas = "Tsimané"
 cat = "Catalan"
 cau = "Caucasian languages"
+cba = "Chibchan"
+ccn = "North Caucasian"
 ccp = "Chakma"
+ccs = "South Caucasian"
+cdc = "Chadic"
+cdd = "Caddoan"
 ceb = "Cebuano"
 cel = "Celtic languages"
 cen = "Cen"
@@ -167,6 +180,7 @@ crp = "Creoles and Pidgins"
 csb = "Kashubian"
 csi = "Coast Miwok"
 csn = "Colombian Sign Language"
+csu = "Central Sudanic"
 csw = "Swampy Cree"
 cus = "Cushitic languages"
 cym = "Welsh"
@@ -190,6 +204,7 @@ din = "Dinka"
 dis = "Dimasa"
 div = "Divehi"
 dje = "Zarma"
+dmn = "Mande"
 dng = "Dungan"
 doi = "Dogri"
 dpe = "Dari"
@@ -214,6 +229,7 @@ ebg = "Ebughu"
 ebu = "Embu"
 eee = "E"
 efi = "Efik"
+egx = "Egyptian"
 egy = "Egyptian"
 ehu = "Ehueun"
 eit = "Eitiep"
@@ -240,10 +256,12 @@ ese = "Ese Ejja"
 esk = "Northwest Alaska Inupiatun"
 esl = "Egypt Sign Language"
 est = "Estonian"
+esx = "Eskimo-Aleut"
 eth = "Ethiopian Sign Language"
 ets = "Yekhee"
 ett = "Etruscan"
 etu = "Ejagham"
+euq = "Basque"
 eus = "Basque"
 eve = "Even"
 evn = "Evenki"
@@ -266,6 +284,7 @@ fom = "Foma"
 fon = "Fon"
 for = "Fore"
 fos = "Siraya"
+fox = "Formosan"
 fra = "French"
 frc = "Cajun French"
 fre = "French"
@@ -308,7 +327,10 @@ gld = "Nanai"
 gle = "Irish"
 glg = "Galician"
 glv = "Manx"
+gme = "East Germanic"
 gmh = "German, Middle High (ca. 1050-1500)"
+gmq = "North Germanic"
+gmw = "West Germanic"
 gnt = "Guntai"
 goh = "German, Old High (ca. 750-1050)"
 gon = "Gondi"
@@ -317,6 +339,7 @@ got = "Gothic"
 grb = "Grebo"
 grc = "Greek, Ancient (to 1453)"
 gre = "Greek, Modern (1453- )"
+grk = "Greek"
 grn = "Guarani"
 gro = "Groma"
 gsw = "Swiss German, Alemannic, Alsatian"
@@ -340,6 +363,8 @@ hin = "Hindi"
 hit = "Hittite"
 hmn = "Hmong"
 hmo = "Hiri Motu"
+hmx = "Hmong-Mien"
+hok = "Hokan"
 hol = "Holu"
 hpo = "Hpon"
 hrc = "Niwer Mil"
@@ -353,12 +378,14 @@ hun = "Hungarian"
 hup = "Hupa"
 hut = "Humla"
 hye = "Armenian"
+hyx = "Armenian"
 iba = "Iban"
 ibb = "Ibibio"
 ibo = "Igbo"
 ice = "Icelandic"
 ido = "Ido"
 iii = "Sichuan Yi"
+iir = "Indo-Iranian"
 ijo = "Ijo languages"
 ike = "Eastern Canadian Inuktitut"
 iki = "Iko"
@@ -381,6 +408,7 @@ isa = "Isabi"
 ise = "Italian Sign Language"
 isl = "Icelandic"
 ita = "Italian"
+itc = "Italic"
 ite = "Itene"
 its = "Isekiri"
 izh = "Ingrian"
@@ -395,6 +423,7 @@ jmc = "Machame"
 jpa = "Jewish Palestinian Aramaic"
 jpn = "Japanese"
 jpr = "Judeo-Persian"
+jpx = "Japanese"
 jrb = "Judeo-Arabic"
 kaa = "Kara-Kalpak"
 kab = "Kabyle"
@@ -412,6 +441,7 @@ kaz = "Kazakh"
 kbd = "Kabardian"
 kca = "Khanty"
 kde = "Makonde"
+kdo = "Kordofanian"
 kea = "Kabuverdianu"
 kel = "Kela"
 ket = "Ket"
@@ -545,6 +575,7 @@ mni = "Manipuri"
 mno = "Manobo languages"
 mns = "Mansi"
 moh = "Mohawk"
+mol = "Moldavian"
 mon = "Mongolian"
 moo = "Monom"
 mos = "Mooré"
@@ -589,6 +620,7 @@ nep = "Nepali"
 new = "Newari"
 ngd = "Ngando"
 nge = "Ngemba"
+ngf = "Trans-New Guinea"
 ngg = "Ngbaka Manza"
 ngl = "Lomwe"
 ngn = "Ngwo"
@@ -638,6 +670,8 @@ nzi = "Nzima"
 oci = "Occitan (post 1500)"
 oji = "Ojibwa"
 olo = "Livvi"
+omq = "Oto-Manguean"
+omv = "Omotic"
 one = "Oneida"
 ong = "Olo"
 ood = "Tohono O'odham"
@@ -673,13 +707,17 @@ phn = "Phoenician"
 pho = "Phunoi"
 pka = "Jain Prakrit"
 ple = "Palu'e"
+plf = "Central Malayo-Polynesian"
 pli = "Pali"
 pmo = "Pom"
 pol = "Polish"
 pon = "Ponape"
 por = "Portuguese"
 pot = "Potawatomi"
+poz = "Malayo-Polynesian"
 ppi = "Paipai"
+pqe = "Eastern Malayo-Polynesian"
+pqw = "Western Malayo-Polynesian"
 pra = "Prakrit languages"
 prg = "Prussian"
 pro = "Old Provençal (to 1500), Old Occitan (to 1500)"
@@ -690,10 +728,12 @@ puo = "Puoc"
 pus = "Pushto, Pashto"
 que = "Quechua"
 quz = "Quechua"
+qwe = "Quechuan"
 raj = "Rajasthani"
 ran = "Riantana"
 rap = "Rapanui"
 rar = "Rarotongan"
+rcf = "Reunionese, Reunion Creole"
 rea = "Rerau"
 ree = "Rejang Kayan"
 reg = "Kara"
@@ -731,8 +771,11 @@ sar = "Saraveca"
 sas = "Sasak"
 sat = "Santali"
 sbp = "Sangu"
+scc = "Serbian"
 scn = "Sicilian Italian"
 sco = "Scots"
+scr = "Croatian"
+sdv = "Eastern Sudanic"
 sed = "Sedang"
 see = "Seneca"
 seh = "Sena"
@@ -814,6 +857,7 @@ swr = "Saweru"
 sws = "Seluwasan"
 sww = "Sowa"
 syc = "Syriac"
+syd = "Samoyedic"
 syr = "Syriac, Modern"
 sze = "Seze"
 szl = "Silesian"
@@ -826,6 +870,7 @@ tan = "Tangale"
 tas = "Tay Boi"
 tat = "Tatar"
 tay = "Atayal"
+tbq = "Tibeto-Burman"
 tch = "Turks And Caicos Creole English"
 tcz = "Thado Chin"
 tek = "Ibali Teke"
@@ -859,6 +904,7 @@ ton = "Tongan"
 tpi = "Tok Pisin"
 tra = "Tirahi"
 tre = "East Tarangan"
+trk = "Turkic"
 tru = "Surayt"
 tse = "Tunisian Sign Language"
 tsi = "Tsimshian"
@@ -876,6 +922,7 @@ tur = "Turkish"
 tut = "Altaic languages"
 tuu = "Tututni"
 tuv = "Turkana"
+tuw = "Tungus"
 tvl = "Tuvaluan"
 twi = "Twi"
 twq = "Tasawaq"
@@ -895,6 +942,7 @@ ung = "Ngarinyin"
 unk = "Enawené-Nawé"
 ura = "Urarina"
 urd = "Urdu"
+urj = "Uralic"
 uru = "Urumi"
 uur = "Ura"
 uuu = "U"
@@ -930,7 +978,9 @@ wng = "Wanggom"
 wol = "Wolof"
 wor = "Woria"
 xal = "Kalmyk"
+xgn = "Mongolian"
 xho = "Xhosa"
+xnd = "Na-Dene"
 xnr = "Kangri"
 xog = "Soga"
 yao = "Yao (Africa)"
@@ -951,7 +1001,11 @@ zen = "Zenaga"
 zgh = "Standard Moroccan Tamazight"
 zha = "Zhuang"
 zho = "Chinese"
+zhx = "Chinese"
 zkk = "Karankawa"
+zle = "East Slavic"
+zls = "South Slavic"
+zlw = "West Slavic"
 znd = "Zande languages"
 zsm = "Malay"
 zul = "Zulu"
