--- a/languages/ISO639-3/fr.ini
+++ b/languages/ISO639-3/fr.ini
@@ -1,182 +1,515 @@
+??? = "indéterminée"
 aar = "afar"
 abk = "abkhaze"
+ace = "aceh"
+ach = "acoli"
+ada = "adangmé"
+ady = "adyghé"
+afa = "langues afro-asiatiques"
+afh = "afrihili"
 afr = "afrikaans"
+ain = "aïnou"
 aka = "akan"
+akk = "akkadien"
+ale = "aléoute"
+alg = "langues algonquiennes"
+alt = "altaï du Sud"
 amh = "amharique"
+ang = "anglo-saxon (environ 450-1100), ancien anglais"
+anp = "angika"
+apa = "langues apaches"
 ara = "arabe"
+arc = "araméen"
 arg = "aragonais"
+arn = "mapouche"
+arp = "arapaho"
+art = "langues artificielles"
+arw = "arawak"
 asm = "assamais"
+ast = "bable"
+ath = "langues athapascanes"
+aus = "langues australiennes"
 ava = "avar"
 ave = "avestique"
+awa = "awadhi"
 aym = "aymara"
 aze = "azerbaïdjanais"
+azj = "azéri"
+bad = "langues banda"
+bai = "langues bamilékées"
 bak = "bachkir"
+bal = "baloutche"
 bam = "bambara"
+ban = "balinais"
+bas = "basa"
+bat = "langues baltes"
+bej = "bedja"
 bel = "biélorusse"
+bem = "bemba"
 ben = "bengali"
+ber = "langues berbères"
+bho = "bhodjpouri"
+bih = "bihari"
+bik = "bikol central"
+bin = "bini"
 bis = "bichelamar"
+bla = "blackfoot (siksika)"
+bnt = "langues bantoues"
 bod = "tibétain"
 bos = "bosniaque"
+bra = "braj basha"
 bre = "breton"
+btk = "langues batak"
+bua = "bouriate"
+bug = "bugi"
 bul = "bulgare"
+bur = "birman"
+byn = "bilen"
+cad = "caddo"
+cai = "langues indiennes d'Amérique centrale"
+car = "carib, karib"
 cat = "catalan"
+cau = "langues caucasiennes"
+ceb = "cébouano"
+cel = "langues celtiques"
 ces = "tchèque"
 cha = "chamorro"
+chb = "chibcha"
 che = "tchétchène"
+chg = "djaghataï"
+chk = "chuuk"
+chm = "mari"
+chn = "chinook jargon"
+cho = "choctaw"
+chp = "chipewyan"
+chr = "cherokee"
 chu = "slavon d’église"
 chv = "tchouvache"
+chy = "cheyenne"
+cmc = "langues chames"
+cop = "copte"
 cor = "cornique"
 cos = "corse"
+cpp = "créoles"
 cre = "cree"
+crh = "tatar de Crimée"
+crp = "créoles"
+csb = "cachoube"
+cus = "langues couchitiques"
 cym = "gallois"
+cze = "tchèque"
+dak = "dakota"
 dan = "danois"
+dar = "dargwa"
+day = "langues Land Dayak"
+del = "delaware"
+den = "slavey (langue)"
 deu = "allemand"
+dgr = "dogrib"
+din = "dinka"
 div = "maldivien"
+doi = "dogri (kangri)"
+dra = "langues dravidiennes"
+dsb = "bas-sorabe"
+dua = "douala"
+dut = "néerlandais"
+dyu = "dioula"
 dzo = "dzongkha"
+efi = "éfik"
+egy = "égyptien ancien"
+eka = "ekajuk"
 ell = "grec"
+elx = "élamite"
 eng = "anglais"
+enm = "Anglais, moyen"
 epo = "espéranto"
 est = "estonien"
+euq = "basque"
 eus = "basque"
 ewe = "éwé"
+ewo = "éwondo"
+fan = "fang"
 fao = "féroïen"
 fas = "persan"
+fat = "fanti"
 fij = "fidjien"
+fil = "filipino"
 fin = "finnois"
+fiu = "langues finno-ougriennes"
+fon = "fon"
 fra = "français"
+fre = "français"
+frm = "moyen français"
+fro = "ancien français"
+frr = "frison septentrional"
+frs = "frison oriental"
 fry = "frison occidental"
 ful = "peul"
+fur = "frioulan"
+gaa = "ga"
+gay = "gayo"
+gba = "gbaya"
+gem = "langues germaniques"
+geo = "géorgien"
+ger = "allemand"
+gez = "guèze"
+gil = "gilbertin"
 gla = "gaélique écossais"
 gle = "irlandais"
 glg = "galicien"
 glv = "mannois"
+gmh = "moyen haut-allemand (environ 1050-1500)"
+goh = "vieux haut allemand (environ 750-1050)"
+gon = "gondî"
+gor = "gorontalo"
+got = "gotique"
+grb = "grébo"
+grc = "grec ancien (jusqu'à 1453)"
+grk = "grec moderne (après 1453)"
 grn = "guarani"
+gsw = "alémanique, suisse alémanique, alsacien"
 guj = "goudjarati"
+gwi = "gwich'in"
+hai = "haïda"
 hat = "créole haïtien"
 hau = "haoussa"
+haw = "hawaïen"
 hbs = "serbe (latin)"
 heb = "hébreu"
 her = "héréro"
+hil = "hiligaïnon"
+him = "himachali"
 hin = "hindi"
+hit = "hittite"
+hmn = "hmong"
 hmo = "hiri motu"
 hrv = "croate"
+hsb = "haut-sorabe"
 hun = "hongrois"
+hup = "houpa"
 hye = "arménien"
+hyx = "arménien"
+iba = "iban"
 ibo = "igbo"
+ice = "islandais"
 ido = "ido"
 iii = "yi du Sichuan"
+ijo = "langues ijo"
 iku = "inuktitut"
 ile = "interlingue"
+ilo = "ilocano"
+ina = "interlingua (langue auxiliaire internationale)"
+inc = "langues indo-aryennes"
 ind = "indonésien"
+ine = "langues indo-européennes"
+inh = "ingouche"
 ipk = "inupiaq"
+ira = "langues iraniennes"
+iro = "langues iroquoises"
 isl = "islandais"
 ita = "italien"
 jav = "javanais"
+jbo = "lojban"
 jpn = "japonais"
+jpr = "judéo-persan"
+jpx = "japonais"
+jrb = "judéo-arabe"
+kaa = "karakalpak"
+kab = "kabyle"
+kac = "jinghpo, kachin"
 kal = "groenlandais"
+kam = "kamba"
 kan = "kannada"
+kar = "langues karens"
 kas = "cachemiri"
 kat = "géorgien"
 kau = "kanouri"
+kaw = "kawi"
 kaz = "kazakh"
+kbd = "kabarde"
+kha = "khasi"
+khi = "langues khoïsan"
 khm = "khmer"
+kho = "khotanais, sakan"
 kik = "kikuyu"
 kin = "kinyarwanda"
 kir = "kirghize"
+kmb = "kimboundou"
+kok = "konkani"
 kom = "komi"
 kon = "kikongo"
 kor = "coréen"
+kos = "kosraéen"
+kpe = "kpellé"
+krc = "karatchaï-balkar"
+krl = "carélien"
+kro = "langues krou"
+kru = "kouroukh"
 kua = "kuanyama"
+kum = "koumyk"
 kur = "kurde"
+kut = "koutenai"
+lad = "judéo-espagnol"
+lah = "lahnda"
+lam = "lamba"
 lao = "lao"
 lat = "latin"
 lav = "letton"
+lez = "lezguien"
 lim = "limbourgeois"
 lin = "lingala"
 lit = "lituanien"
+lol = "mongo"
+loz = "lozi"
 ltz = "luxembourgeois"
+lua = "luba-Lulua"
 lub = "luba-katanga (kiluba)"
 lug = "ganda"
+lui = "luiseño"
+lun = "lounda"
+luo = "luo"
+lus = "lousaï"
+lvs = "letton"
+mac = "macédonien"
+mad = "madurais"
+mag = "magahi"
 mah = "marshallais"
+mai = "maïthili"
+mak = "makassar"
 mal = "malayalam"
+man = "mandingue"
+mao = "māori"
+map = "langues austronésiennes"
 mar = "marathi"
+mas = "massaï,"
+may = "malais"
+mdf = "mokcha"
+mdr = "mandar"
+men = "mendé"
+mga = "moyen irlandais (900-1200)"
+mic = "mi'kmaq, micmac"
+min = "minangkabao"
+mis = "indéterminée"
 mkd = "macédonien"
+mkh = "langues môn-khmer"
 mlg = "malgache"
 mlt = "maltais"
+mnc = "mandchou"
+mni = "manipuri"
+mno = "langues manobo"
+moh = "mohawk"
 mon = "mongol"
+mos = "moré"
 mri = "maori"
 msa = "malais"
+mul = "multilingue"
+mun = "langues mounda"
+mus = "muskogee"
+mwl = "mirandais"
+mwr = "marvari"
 mya = "birman"
+myn = "langues mayas"
+myv = "erza"
+nah = "langues nahuatl"
+nai = "langues indiennes d'Amérique du Nord"
+nap = "napolitain"
 nau = "nauruan"
 nav = "navajo"
 nbl = "ndébélé du Sud"
 nde = "ndébélé du Nord"
 ndo = "ndonga"
+nds = "bas-allemand, bas-saxon"
 nep = "népalais"
+new = "nepal ghasa, néwari"
+nia = "nias"
+nic = "langues nigéro-congolaises"
+niu = "niué"
 nld = "néerlandais"
 nno = "norvégien nynorsk"
 nob = "norvégien bokmål"
+nog = "nogaï"
+non = "vieux norrois"
 nor = "norvégien"
+npi = "népalais"
+nqo = "n'ko"
+nso = "sotho du Nord, pedi, sepedi"
+nub = "langues nubiennes"
+nwc = "newari classique"
 nya = "chewa"
+nym = "nyamwézi"
+nyn = "nyankolé"
+nyo = "nyoro"
+nzi = "nzéma"
+oci = "occitan (après 1500), provençal"
 oji = "ojibwa"
 ori = "odia"
 orm = "oromo"
+osa = "osage"
 oss = "ossète"
+ota = "turc ottoman (1500-1928)"
+oto = "langues otomi"
+paa = "langues papoues"
+pag = "pangasinan"
+pal = "pèhlevî"
+pam = "pampangan"
 pan = "pendjabi"
+pap = "papiamento"
+pau = "paluan"
+peo = "perse, vieux (environ 600-400 av. J.-C.)"
+per = "persan"
+pes = "persan"
+phi = "langues philippines"
+phn = "phénicien"
 pli = "pali"
 pol = "polonais"
+pon = "pohnpei"
 por = "portugais"
+pra = "langues prâkrit"
+pro = "provençal ancien, occitan ancien (jusqu'à 1500)"
 pus = "pachto"
 que = "quechua"
+quz = "quéchua"
+raj = "rajasthani"
+rap = "rapanui"
+rar = "māori des îles Cook, rarotongien"
+roa = "langues romanes"
 roh = "romanche"
+rom = "romani, tsigane"
 ron = "roumain"
+rum = "roumain, moldave"
 run = "roundi"
+rup = "aroumain, macédo-roumain"
 rus = "russe"
+sad = "sandawé"
 sag = "sango"
+sah = "iakoute"
+sai = "langues indiennes d'Amérique du Sud"
+sal = "langues salishennes"
+sam = "samaritain"
 san = "sanskrit"
+sas = "sasak"
+sat = "santal"
+scc = "serbe"
+scn = "sicilien"
+sco = "scots, écossais"
+scr = "croate"
+sel = "selkoupe"
+sem = "langues sémitiques"
+sga = "irlandais ancien (jusqu'à 900)"
+sgn = "langue des signes"
+shn = "shan"
+sid = "sidamo"
 sin = "cingalais"
+sio = "langues sioux"
+sit = "langues sino-tibétaines"
+sla = "langues slaves"
 slk = "slovaque"
+slo = "slovaque"
 slv = "slovène"
+sma = "sâme du Sud"
 sme = "same du Nord"
+smi = "langues sâmes"
+smj = "sâme de Lule"
+smn = "sâme d'Inari"
 smo = "samoan"
+sms = "sâme skolt"
 sna = "shona"
 snd = "sindhi"
+snk = "soninké"
+sog = "sogdien"
 som = "somali"
+son = "langues songhai"
 sot = "sotho du Sud"
 spa = "espagnol"
 sqi = "albanais"
 srd = "sarde"
+srn = "sranan tongo"
 srp = "serbe"
+srr = "sérère"
+ssa = "langues nilo-sahariennes"
 ssw = "swati"
+suk = "sukuma"
 sun = "soundanais"
+sus = "soussou"
+sux = "sumérien"
 swa = "swahili"
 swe = "suédois"
+swh = "swahili"
+syc = "syriaque classique"
+syr = "syriaque"
 tah = "tahitien"
+tai = "langues tai"
 tam = "tamoul"
 tat = "tatar"
 tel = "télougou"
+tem = "temne"
+ter = "téréno"
+tet = "tetum"
 tgk = "tadjik"
 tgl = "filipino"
 tha = "thaï"
+tib = "tibétain"
+tig = "tigré"
 tir = "tigrigna"
+tiv = "tiv"
+tkl = "tokelau"
+tlh = "klingon"
+tli = "tlingit"
+tmh = "tamacheq"
+toi = "tonga"
 ton = "tongien"
+tpi = "tok pisin"
+tsi = "tsimchiane"
 tsn = "tswana"
 tso = "tsonga"
 tuk = "turkmène"
+tum = "tumbuka"
+tup = "langues tupi"
 tur = "turc"
+tut = "langues altaïques"
+tvl = "tuvalu"
 twi = "akan"
+tyv = "touva"
+udm = "oudmourte"
+uga = "ougaritique"
 uig = "ouïghour"
 ukr = "ukrainien"
+umb = "umbundu"
+und = "langue indéterminée"
 urd = "ourdou"
 uzb = "ouzbek"
+uzn = "ouzbek"
+vai = "vaï"
 ven = "venda"
 vie = "vietnamien"
 vol = "volapük"
+vot = "vote"
+wak = "langues wakashennes"
+wal = "wolaitta, wolaytta"
+war = "waray"
+was = "washo"
+wel = "gallois"
+wen = "langues sorabe"
 wln = "wallon"
 wol = "wolof"
+xal = "kalmouk, oïrat"
+xgn = "mongol"
 xho = "xhosa"
+yao = "yao"
+yap = "yapois"
 yid = "yiddish"
 yor = "yoruba"
+ypk = "langues yupik"
+zap = "zapotèque"
+zbl = "symboles Bliss, Bliss"
+zen = "zénaga"
 zha = "zhuang"
 zho = "chinois"
+zhx = "Chinois"
+znd = "langues zandé"
+zsm = "malais"
 zul = "zoulou"
+zun = "zuñi"
+zxx = "Pas de contenu linguistique, non applicable"
+zyb = "zhuang, chuang"
+zza = "zaza, dimili, dimli, kirdki, kirmanjki, zazaki"
