Add more Spanish translations.

--- a/languages/ISO639-3/es.ini
+++ b/languages/ISO639-3/es.ini
@@ -10,10 +10,12 @@ ava = "avar"
 ave = "avéstico"
 aym = "aimara"
 aze = "azerbaiyano"
+azj = "azerí"
 bak = "baskir"
 bam = "bambara"
 bel = "bielorruso"
 ben = "bengalí"
+bho = "bhojpurí"
 bis = "bislama"
 bod = "tibetano"
 bos = "bosnio"
@@ -28,7 +30,9 @@ chv = "chuvasio"
 cor = "córnico"
 cos = "corso"
 cre = "cree"
+crh = "tártaro"
 cym = "galés"
+cze = "checo"
 dan = "danés"
 deu = "alemán"
 div = "divehi"
@@ -44,12 +48,15 @@ fas = "persa"
 fij = "fiyiano"
 fin = "finés"
 fra = "francés"
+fre = "francés"
 fry = "frisón occidental"
 ful = "fula"
+ger = "alemán"
 gla = "gaélico escocés"
 gle = "irlandés"
 glg = "gallego"
 glv = "manés"
+grk = "griego (moderno)"
 grn = "guaraní"
 guj = "guyaratí"
 hat = "criollo haitiano"
@@ -62,16 +69,20 @@ hmo = "hiri motu"
 hrv = "croata"
 hun = "húngaro"
 hye = "armenio"
+hyx = "armenio"
 ibo = "igbo"
 ido = "ido"
 iii = "yi de Sichuán"
 iku = "inuktitut"
 ile = "interlingue"
+ina = "interlingua"
 ind = "indonesio"
 ipk = "inupiaq"
 isl = "islandés"
+ita = "italiano"
 jav = "javanés"
 jpn = "japonés"
+jpx = "japonés"
 kal = "groenlandés"
 kan = "canarés"
 kas = "cachemir"
@@ -96,12 +107,14 @@ lit = "lituano"
 ltz = "luxemburgués"
 lub = "luba-katanga"
 lug = "ganda"
+lvs = "letón"
 mah = "marshalés"
 mal = "malayálam"
 mar = "maratí"
 mkd = "macedonio"
 mlg = "malgache"
 mlt = "maltés"
+mol = "moldavo"
 mon = "mongol"
 mri = "maorí"
 msa = "malayo"
@@ -116,6 +129,7 @@ nld = "neerlandés"
 nno = "noruego nynorsk"
 nob = "noruego bokmal"
 nor = "noruego"
+npi = "nepalí"
 nya = "nyanja"
 oci = "occitano"
 oji = "ojibwa"
@@ -123,19 +137,24 @@ ori = "oriya"
 orm = "oromo"
 oss = "osético"
 pan = "punyabí"
+pes = "persa"
 pli = "pali"
 pol = "polaco"
 por = "portugués"
 pus = "pastún"
 que = "quechua"
+quz = "quechua"
 roh = "romanche"
 ron = "rumano"
+rum = "rumano"
 run = "kirundi"
 rus = "ruso"
 sag = "sango"
 san = "sánscrito"
+scr = "croata"
 sin = "cingalés"
 slk = "eslovaco"
+slo = "eslovaco"
 slv = "esloveno"
 sme = "sami septentrional"
 smo = "samoano"
@@ -151,6 +170,7 @@ ssw = "suazi"
 sun = "sundanés"
 swa = "suajili"
 swe = "sueco"
+swh = "suajili"
 tah = "tahitiano"
 tam = "tamil"
 tat = "tártaro"
@@ -158,7 +178,9 @@ tel = "telugu"
 tgk = "tayiko"
 tgl = "filipino"
 tha = "tailandés"
+tib = "tibetano"
 tir = "tigriña"
+toi = "tongano"
 ton = "tongano"
 tsn = "setsuana"
 tso = "tsonga"
@@ -169,14 +191,20 @@ uig = "uigur"
 ukr = "ucraniano"
 urd = "urdu"
 uzb = "uzbeko"
+uzn = "uzbeko"
 ven = "venda"
 vie = "vietnamita"
 vol = "volapük"
+wel = "galés"
 wln = "valón"
 wol = "wólof"
+xgn = "mongol"
 xho = "xhosa"
 yid = "yidis"
 yor = "yoruba"
 zha = "zhuang"
 zho = "chino"
+zhx = "chino"
+zsm = "malayo"
 zul = "zulú"
+zyb = "chuan (o zhuang)"
