Expand German translations.

--- a/languages/ISO639-3/de.ini
+++ b/languages/ISO639-3/de.ini
@@ -1,122 +1,362 @@
+??? = "Unbekannt"
+aar = "Danakil"
 abk = "Abchasisch"
+ace = "Aceh"
+ady = "Adygeisch"
+afa = "Hamitosemitische Sprachen"
+akk = "Akkadisch"
+ale = "Aleutisch"
+alg = "Algonkin Sprachen"
+alt = "Altaisch"
 amh = "Amharisch"
+ang = "Altenglisch"
 ara = "Arabisch"
+arc = "Aramäisch"
 arg = "Aragonesisch"
+arn = "Mapuche"
+art = "Kunstsprachen"
+arw = "Arawak-Sprachen"
 asm = "Assamesisch"
+ast = "Asturrisch"
+ath = "Athapaskische Sprachen"
+aus = "Australische Sprachen"
 ava = "Awarisch"
 ave = "Avestisch"
 aze = "Aserbaidschanisch"
+azj = "Aserbaidschanisch"
 bak = "Baschkirisch"
+bal = "Belutschisch"
+ban = "Balinesisch"
+bas = "Basaa"
+bat = "Baltische Sprachen"
+bej = "Bedauye"
 bel = "Belarussisch"
 ben = "Bengalisch"
+ber = "Berbersprachen"
+bho = "Bhodschpuri"
+bih = "Bihari-Sprachen"
+bik = "Bicol"
+bin = "Pini"
+bis = "Bislama (Beach-la-Mar)"
+bla = "Siksika (Blackfoot-Sprache)"
+bnt = "Bantusprachen"
 bod = "Tibetisch"
 bos = "Bosnisch"
+bra = "Braj-Bhakha"
 bre = "Bretonisch"
+bua = "Burjatisch"
+bug = "Bugi"
 bul = "Bulgarisch"
+byn = "Kuschitisch"
+cad = "Caddo-Sprachen"
+cai = "Indigene Sprachen (Zentralamerika)"
+car = "Karibische Sprachen"
 cat = "Katalanisch"
+cau = "Kaukasische Sprachen"
+cel = "Keltische Sprachen"
 ces = "Tschechisch"
 che = "Tschetschenisch"
+chg = "Tschgataisch"
+chk = "Trukesisch"
+chm = "Tscheremissisch"
 chu = "Kirchenslawisch"
 chv = "Tschuwaschisch"
+cmc = "Cham-Sprachen"
+cop = "Koptisch"
 cor = "Kornisch"
 cos = "Korsisch"
+cpp = "Kreolisch, Port. basiert"
+crh = "Krimtatarisch"
+crp = "Kreolische Sprachen"
+csb = "Kaschubisch"
+cus = "Kuschitische Sprachen"
 cym = "Walisisch"
+cze = "Tschechisch"
 dan = "Dänisch"
+dar = "Dari"
+den = "Athapaskische Sprachen"
 deu = "Deutsch"
 div = "Dhivehi"
+dra = "Drawidische Sprachen"
+dsb = "Niedersorbisch"
+dua = "Duala-Sprachen"
+egy = "Ägyptisch"
 ell = "Griechisch"
+elx = "Elamisch"
 eng = "Englisch"
+enm = "Mittelenglisch"
 est = "Estnisch"
 eus = "Baskisch"
+ewe = "Ewe-Sprachen"
+fan = "Pangwe-Sprachen"
 fao = "Färöisch"
 fas = "Persisch"
 fij = "Fidschi"
+fil = "Philippinen-Austronesisch"
 fin = "Finnisch"
+fiu = "Finnougrische Sprachen"
 fra = "Französisch"
+fre = "Französisch"
+frm = "Mittelfranzösisch"
+fro = "Altfranzösisch"
+frr = "Nordfriesisch"
+frs = "Ostfriesisch"
 fry = "Westfriesisch"
 ful = "Ful"
+fur = "Friulisch"
+gem = "Germanische Sprachen"
+ger = "Deutsch"
+gez = "Altäthiopisch"
+gil = "Gilbertesisch"
 gla = "Gälisch (Schottland)"
 gle = "Irisch"
 glg = "Galicisch"
+gmh = "Mittelhochdeutsch"
+goh = "Althochdeutsch"
+gor = "Mongondou"
+got = "Gotisch"
+grc = "Altgriechisch"
+grk = "Griechisch"
 grn = "Guaraní"
+gsw = "Hochalemannisch"
+gwi = "Kutchin"
 hat = "Haiti-Kreolisch"
 hau = "Haussa"
+haw = "Hawaiisch"
 hbs = "Serbisch (Lateinisch)"
 heb = "Hebräisch"
+him = "Himachali-Sprachen"
+hit = "Hethitisch"
+hmn = "Miao-Sprachen"
 hmo = "Hiri-Motu"
 hrv = "Kroatisch"
+hsb = "Obersorbisch"
 hun = "Ungarisch"
 hye = "Armenisch"
+hyx = "Armenisch"
+ibo = "Ibo"
+ido = "Ido (Sinohoan)"
 iii = "Yi"
+ilo = "Ilokano"
+inc = "Indoarische Sprachen"
 ind = "Indonesisch"
+ine = "Indogermanische Sprachen"
+inh = "Inguschisch"
 ipk = "Inupiak"
+ira = "Iranische Sprachen"
+iro = "Irokesische Sprachen"
 isl = "Isländisch"
 ita = "Italienisch"
 jav = "Javanisch"
 jpn = "Japanisch"
+jpr = "Judäo-Persisch"
+jpx = "Japanisch"
+jrb = "Judäo-Arabisch"
+kaa = "Karakalpakisch"
+kab = "Kabylisch"
 kal = "Grönländisch"
+kar = "Karenisch"
 kas = "Kaschmiri"
 kat = "Georgisch"
+kaw = "Altjavanisch"
 kaz = "Kasachisch"
+kbd = "Kabardinisch"
+kho = "Sakisch"
 kir = "Kirgisisch"
+kom = "Komi-Sprachen"
 kon = "Kongolesisch"
 kor = "Koreanisch"
+kos = "Kosraeanisch"
+krc = "Karatschai-Balkarisch"
+krl = "Karelisch"
+kro = "Kru-Sprachen"
+kru = "Oraon"
 kua = "Kwanyama"
+kum = "Kumükisch"
 kur = "Kurdisch"
+lad = "Ladinisch (Judenspanisch)"
+lam = "Banjari"
 lao = "Laotisch"
 lat = "Latein"
 lav = "Lettisch"
+lez = "Lesgisch"
 lim = "Limburgisch"
 lit = "Litauisch"
+lol = "Lomongo"
+loz = "Rotse"
 ltz = "Luxemburgisch"
+lua = "Tschiluba"
+lub = "Kiluba"
+lui = "Luiseño"
+lvs = "Lettisch"
+mad = "Maduresisch"
+mag = "Khotta"
 mah = "Marschallesisch"
+mak = "Makassarisch"
+man = "Manding"
+map = "Austronesische Sprachen"
+mas = "Massai"
+mdf = "Mokschamordwinisch"
+mdr = "Mandaresisch"
+mga = "Mittelirisch"
+mic = "Micmac(Mi-kmaq)"
 mkd = "Mazedonisch"
+mkh = "Mon-Khmer-Sprachen"
+mlg = "Malagassi"
 mlt = "Maltesisch"
+mnc = "Mandschurisch"
+mni = "Meithei"
+mol = "Moldauisch"
 mon = "Mongolisch"
 msa = "Malaiisch"
+mul = "Mehrsprachig"
+mun = "Mundasprachen"
+mus = "Muskogee-Sprachen"
+mwl = "Mirandesisch"
 mya = "Birmanisch"
+myn = "Maya-Sprachen"
+myv = "Erza-Mordwinisch"
+nah = "Nahuatl (Aztekisch)"
+nai = "Indigene Sprachen (Nordamerika)"
+nap = "Neapolitanisch"
 nau = "Nauruisch"
 nbl = "Süd-Ndebele"
 nde = "Nord-Ndebele"
+nds = "Niederdeutsch"
 nep = "Nepalesisch"
+new = "Newari"
+nic = "Nigerkordofanische Sprachen"
+niu = "Niue"
 nld = "Niederländisch"
 nno = "Norwegisch (Nynorsk)"
 nob = "Norwegisch (Bokmål)"
+nog = "Nogaisch"
+non = "Altnordisch"
 nor = "Norwegisch"
+nso = "Sotho (Nord)"
+nub = "Nubische Sprachen"
+nwc = "Altnewari"
+nya = "Chewa"
+nyn = "Nkole"
+nzi = "Nzema"
 oci = "Okzitanisch"
 ori = "Oriya"
+orm = "Galla"
 oss = "Ossetisch"
+ota = "Osmanisch"
+oto = "Otomangue-Sprachen"
+paa = "Papuasprachen"
+pal = "Mittelpersisch"
+pam = "Pampanggan"
+pan = "Pandschabi"
+pau = "Palau"
+peo = "Altpersisch"
+pes = "Persisch"
+phi = "Philippinen-Austronesisch"
+phn = "Phönikisch"
 pol = "Polnisch"
+pon = "Ponapeanisch"
 por = "Portugiesisch"
+pra = "Prakrit"
+pro = "Altprovenzalisch"
 pus = "Paschtu"
+rar = "Rarotonganisch"
+roa = "Romanische Sprachen"
 roh = "Rätoromanisch"
+rom = "Romani"
 ron = "Rumänisch"
+rum = "Rumänisch"
+rup = "Aromunisch"
 rus = "Russisch"
+sah = "Jakutisch"
+sai = "Indigene Sprachen (Südamerika)"
+sal = "Salish"
+sam = "Samaritanisches Aramäisch"
+sas = "Sassak"
+scn = "Sizilianisch"
+sco = "Schottisch"
+scr = "Kroatisch"
+sel = "Selkupisch"
+sem = "Semitische Sprachen"
+sga = "Altirisch"
+sgn = "Gebärdensprache"
 sin = "Singhalesisch"
+sio = "Sioux-Sprachen"
+sit = "Sinotibetische Sprachen"
+sla = "Slawische Sprachen"
 slk = "Slowakisch"
+slo = "Slowakisch"
 slv = "Slowenisch"
+sma = "Südlappisch"
 sme = "Nordsamisch"
+smi = "Lappisch"
+smj = "Lule-Lappisch"
+smn = "Inari-Lappisch"
 smo = "Samoanisch"
+sms = "Skolt-Lappisch"
+sna = "Schona"
+sog = "Sogdisch"
+son = "Sonhai-Djerma"
 sot = "Süd-Sotho"
 spa = "Spanisch"
 sqi = "Albanisch"
 srd = "Sardisch"
+srn = "Srananisch"
 srp = "Serbisch"
+ssa = "Nilosaharanische Sprachen"
 ssw = "Swazi"
 sun = "Sundanesisch"
+sux = "Sumerisch"
 swa = "Suaheli"
 swe = "Schwedisch"
+swh = "Suaheli"
+syc = "Syrisch"
 tah = "Tahitisch"
+tai = "Thaisprachen"
 tat = "Tatarisch"
+tem = "Temne"
 tgk = "Tadschikisch"
 tha = "Thailändisch"
+tib = "Tibetisch"
+tir = "Tigrinja"
+tkl = "Tokelauisch"
+tlh = "Klingonisch"
+tmh = "Tamaseq"
+toi = "Tongaisch"
 ton = "Tongaisch"
+tpi = "Neumelanesisch"
+tsn = "Setswana"
 tuk = "Turkmenisch"
+tup = "Tupi-Sprachen"
 tur = "Türkisch"
+tut = "Altaische Sprachen"
+tvl = "Elliceanisch"
+twi = "Alkan (Twi)"
+tyv = "Tuwinisch"
+udm = "Udmurtisch"
+uga = "Ugaritisch"
 uig = "Uigurisch"
 ukr = "Ukrainisch"
+und = "Nichtbestimmte Sprache"
 uzb = "Usbekisch"
+uzn = "Usbekisch"
 vie = "Vietnamesisch"
+vot = "Wotisch"
+wak = "Wakash-Sprachen"
+wal = "Woylatta"
+was = "Asho"
+wel = "Kymrisch"
+wen = "Sorbisch"
 wln = "Wallonisch"
+xal = "Kalmückisch"
+xgn = "Mongolisch"
+yap = "Yapesisch"
 yid = "Jiddisch"
+zap = "Zapotekisch"
+zbl = "Blis-Symbole"
 zho = "Chinesisch"
+zhx = "Chinesisch"
+zsm = "Malaiisch"
+zun = "Zuñi"
+zxx = "Kein sprachlicher Inhalt"
+zza = "Zazaisch"
